Create relation between User and Todo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "build"
   ],
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "allowJs": true,
     "outDir": "build",
     "rootDir": "./",
     "sourceMap": true,
